# llm-entropy-tokens

./: .gitignore  LICENSE  README.md  analyze_tokens.py  compute_entropy.py  main.py  model.py  pyproject.toml
configs/: accelerate_deepspeed.yaml  accelerate_multigpu.yaml
data/: math500.json
entropy_results/: all_entropies.npy  generation_config.json  stats.json  token_entropy_ranking.json  token_ids.npy
scripts/: train_multigpu.sh
src/: dapo_trainer.py  math500_data.py  reward.py  train_dapo.py
