[project]
name = "llm-entropy-tokens"
version = "0.1.0"
description = "LLM Entropy Tokens"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "accelerate>=1.13.0",
    "datasets>=3.0.0",
    "torch>=2.11.0",
    "transformers>=5.5.0",
    "trl>=0.15.0",
    "peft>=0.13.0",
    "math-verify>=0.5.0",
    "wandb>=0.18.0",
]
